# rp2040-project-template

./: Cargo.toml  ferris.raw
src/: lib.rs  main.rs  terminal.rs
